--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -6,10 +6,45 @@
       <div class="col-md-8 offset-md-3">
           <md-card>
               <md-card-subtitle>All Resources</md-card-subtitle>
-              <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title>
+              <!-- <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title> -->
               <md-card-content>
 
-                  <div *ngIf="resources?.length == 0" class="well">
+                  <div class="example-container mat-elevation-z8">
+                      <mat-table #table [dataSource]="dataSource">
+                    
+                        <!--- Note that these columns can be defined in any order.
+                              The actual rendered columns are set as a property on the row definition" -->
+                    
+                        <!-- Position Column -->
+                        <ng-container matColumnDef="position">
+                          <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+                        </ng-container>
+                    
+                        <!-- Name Column -->
+                        <ng-container matColumnDef="name">
+                          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+                        </ng-container>
+                    
+                        <!-- Weight Column -->
+                        <ng-container matColumnDef="weight">
+                          <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
+                        </ng-container>
+                    
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="symbol">
+                          <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
+                          <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+                        </ng-container>
+                    
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                      </mat-table>
+                    </div>
+
+                  <!-- <div *ngIf="resources?.length == 0" class="well">
                       There are no unapproved resources in the database.
                   </div>
 
@@ -28,7 +63,7 @@
 
                           </div>
                       </div>
-                  </div>
+                  </div> -->
 
               </md-card-content> <!-- end class card-block-->
           </md-card> <!-- end class card -->
