--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -9,25 +9,25 @@
               <!-- <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title> -->
               <md-card-content>
 
-                    <mat-table #table [dataSource]="dataSource">
+                    <!-- <mat-table #table [dataSource]="dataSource">
                             <ng-container matColumnDef="position">
                               <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
                               <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
                             </ng-container>
                             
-                            <!-- Name Column -->
+                            
                             <ng-container matColumnDef="name">
                               <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
                               <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
                             </ng-container>
                             
-                            <!-- Weight Column -->
+                            
                             <ng-container matColumnDef="weight">
                               <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
                               <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
                             </ng-container>
                             
-                            <!-- Color Column -->
+                            
                             <ng-container matColumnDef="symbol">
                               <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
                               <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
@@ -35,9 +35,9 @@
                             
                             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-                            </mat-table>
+                            </mat-table> -->
 
-                  <!-- <div *ngIf="resources?.length == 0" class="well">
+                  <div *ngIf="resources?.length == 0" class="well">
                       There are no unapproved resources in the database.
                   </div>
 
@@ -56,7 +56,7 @@
 
                           </div>
                       </div>
-                  </div> -->
+                  </div>
 
               </md-card-content> <!-- end class card-block-->
           </md-card> <!-- end class card -->
