--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -9,7 +9,7 @@
               <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title>
               <md-card-content>
 
-                    <!-- <mat-table #table [dataSource]="dataSource">
+                    <mat-table #table [dataSource]="dataSource">
                             <ng-container matColumnDef="position">
                               <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
                               <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
@@ -35,9 +35,9 @@
                             
                             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-                            </mat-table> test -->
+                            </mat-table> test
 
-                  <div *ngIf="resources?.length == 0" class="well">
+                  <!-- <div *ngIf="resources?.length == 0" class="well">
                       There are no unapproved resources in the database.
                   </div>
 
@@ -56,7 +56,7 @@
 
                           </div>
                       </div>
-                  </div>
+                  </div> -->
 
               </md-card-content> <!-- end class card-block-->
           </md-card> <!-- end class card -->
