--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -8,34 +8,21 @@
               <md-card-subtitle>All Resources</md-card-subtitle>
               <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title>
               <md-card-content>
-                    <table class="table">
+                    <table *ngIf="resources.length" class="table">
                             <thead>
                               <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">First</th>
-                                <th scope="col">Last</th>
-                                <th scope="col">Handle</th>
+                                <th scope="col">id</th>
+                                <th scope="col">Type</th>
+                                <th scope="col">Author</th>
+                                <!-- <th scope="col">Handle</th> -->
                               </tr>
                             </thead>
                             <tbody>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                              </tr>
+                            <tr *ngFor="let resource of resources">
+                                <td>{{ resource.id }}</td>
+                                <td>{{ resource.type }}</td>
+                                <td>{{ resource.author }}</td>
+                            </tr>
                             </tbody>
                         </table>
                   <!-- <div *ngIf="resources?.length == 0" class="well">
