--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -8,7 +8,7 @@
               <md-card-subtitle>All Resources</md-card-subtitle>
               <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title>
               <md-card-content>
-                    <table *ngIf="resources.length" class="table">
+                    <table *ngIf="arrLen > 0" class="table">
                             <thead>
                               <tr>
                                 <th scope="col">id</th>
